kubernetes/metabase/metabase/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: metabase
spec:
  replicas: 1
  serviceName: metabase
  template:
    spec:
      containers:
      - name: metabase
        image: metabase
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 120
          timeoutSeconds: 30
          failureThreshold: 6
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          timeoutSeconds: 3
          periodSeconds: 5
        resources:
          requests:
            cpu: 500m
            memory: 500Mi
      nodeSelector:
        kubernetes.io/arch: amd64
