kubernetes/metabase/metabase/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: metabase
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
